<?xml version="1.0"?>
<package format="2">
  <name>tracking_pid</name>
  <version>0.0.0</version>
  <description>Velocity Tracking PID Controller for Differential Drive</description>
  <maintainer email="chenweiz@todo.todo">chenweiz</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>tf</build_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>tf</exec_depend>
  <depend>dynamic_reconfigure</depend>
  <export>
  </export>
</package>
