<?xml version="1.0"?>
<package format="2">
  <name>tracking_pid</name>
  <version>0.0.0</version>
  <description>Pose Tracking Controller for Differential Drive</description>
  <maintainer email="wchen.robotics@outlook.com">Weizhe Chen</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <depend>roscpp</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  
  <export></export>
</package>
